[package]
name = "busa-http"
version = "0.0.1"
edition = "2018"
description = ""

[profile.release]
debug = true

[dependencies]
smol = "1.2"
memchr = "2.3"
async-io = "1.1"
async-net = "1.5"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "read_line"
harness = false

[[bench]]
name = "read_request"
harness = false
